--- a/stylesheets/personalStylesheet.css
+++ b/stylesheets/personalStylesheet.css
@@ -194,7 +194,7 @@ h3{
 
 #footer{
 	float: left;
-	height: 80px;
+	height: 90px;
 	width: 100%;
 	background-color: #c0392b;
 	text-align: center;
