--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -121,7 +121,7 @@ video#bgvid {
 
 #footer{
 	float: left;
-	height: 80px;
+	height: 90px;
 	width: 100%;
 	background-color: #c0392b;
 	text-align: center;
